--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   ml:
     image: hamelsmu/ml-cicd
+    container_name: hamelsmu/ml-cicd
     network_mode: "host"
     build:
       context: .
