--- a/.github/workflows/prototype.yaml
+++ b/.github/workflows/prototype.yaml
@@ -10,6 +10,8 @@ jobs:
     - name: Write payload
       run: | 
         cat $GITHUB_TOKEN > tok.txt
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Upload payload
       uses: actions/upload-artifact@v1
       with:
