--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -17,7 +17,7 @@ jobs:
         PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         IMAGE_NAME: 'test-docker-action'
         DOCKERFILE_PATH: 'docker/gpu.Dockerfile'
-        BUILD_CONTEXT: $GITHUB_WORKSPACE
+        BUILD_CONTEXT: '.'
     
     - name: Show outputs of pervious step
       run: |
