--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -18,6 +18,7 @@ jobs:
         IMAGE_NAME: 'test-docker-action'
         DOCKERFILE_PATH: 'docker/gpu.Dockerfile'
         BUILD_CONTEXT: '.'
+        CACHE: true
     
     - name: Show outputs of pervious step
       run: |
