--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -10,21 +10,14 @@ jobs:
       uses: actions/checkout@master
       
     - name: Publish Image to GPR
-      uses: machine-learning-apps/gpr-docker-publish@master
+      uses: elgohr/Publish-Docker-Github-Action@master
       id: docker
       with:
-        USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        IMAGE_NAME: 'ml-cicd'
-        DOCKERFILE_PATH: 'docker/gpu.Dockerfile'
-        BUILD_CONTEXT: '.'
-        CACHE: true
-    
-    - name: Show outputs of GPR step
-      run: |
-        echo "The name:tag of the Docker Image is: $VAR1"
-        echo "The docker image is hosted at $VAR2"
-      env:
-        VAR1: ${{ steps.docker.outputs.IMAGE_SHA_NAME }}
-        VAR2: ${{ steps.docker.outputs.IMAGE_URL }}
+        name: hamelsmu/ml-cicd
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        registry: docker.pkg.github.com
+        dockerfile: 'docker/Dockerfile'
+        workdir: '.'
+        cache: true
         
