--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -20,4 +20,9 @@ jobs:
         dockerfile: 'docker/Dockerfile'
         workdir: '.'
         cache: true
-        
+
+    - name: Show outputs of pervious step
+      run: |
+        echo "The name tag of the Docker Image is $VAR1"
+      env:
+        VAR1: ${{ steps.docker.outputs.tag }}        
