--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -2,18 +2,39 @@ name: ML Workflow Via Actions
 on: push
 
 jobs:
-  test-run:
+  build-cpu-image:
     runs-on: ubuntu-latest
     steps:
 
     - name: Copy Repository Contents
       uses: actions/checkout@master
       
-    - name: Publish Image to DockerHub
+    - name: Publish CPU Image to DockerHub
       run: |
         cd $GITHUB_WORKSPACE
         echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
         BASE_NAME="$USERNAME/ml-cicd"
+        IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
+        docker pull $BASE_NAME || true
+        docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
+        docker push $IMAGE_NAME
+        docker push $BASE_NAME
+      env:
+        USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}   
+
+  build-gpu-image:
+    runs-on: ubuntu-latest
+    steps:
+
+    - name: Copy Repository Contents
+      uses: actions/checkout@master
+      
+    - name: Publish GPU Image to DockerHub
+      run: |
+        cd $GITHUB_WORKSPACE
+        echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
+        BASE_NAME="$USERNAME/ml-cicd-gpu"
         IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
         docker pull $BASE_NAME || true
         docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
