--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -42,4 +42,28 @@ jobs:
         docker push $BASE_NAME
       env:
         USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}   
+        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  
+  submit-argo-workflow:
+    needs: [build-cpu-image, build-gpu-image]
+    runs-on: ubuntu-latest
+    steps: 
+       - name: Copy Repo Files
+         uses: actions/checkout@master
+
+       - name: Submit Argo Deployment
+        id: argo
+        uses: machine-learning-apps/gke-argo@master
+        with:
+          ARGO_URL: ${{ secrets.ARGO_URI }}
+          APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          PROJECT_ID: ${{ secrets.GCLOUD_PROJECT_ID }}
+          LOCATION_ZONE: "us-west1-a"
+          CLUSTER_NAME: "github-actions-demo"
+          WORKFLOW_YAML_PATH: argo/workflow.yaml # the argo workflow file relative to the repo's root.
+          PARAMETER_FILE_PATH: argo/params.yml # optional parameter file.  This can be built dynamically inside the action or appended to from an existing file in the repo.
+        
+      
+
+
+
