--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -53,7 +53,8 @@ jobs:
          uses: actions/checkout@master
 
        - name: Build param file
-         run: echo "GITHUB-SHA: $GITHUB_SHA" > argo/params.yml
+         run: |
+           echo "GITHUB-SHA: $GITHUB_SHA" > argo/params.yml
 
        - name: Submit Argo Deployment
          id: argo
@@ -65,6 +66,6 @@ jobs:
            LOCATION_ZONE: "us-west1-a"
            CLUSTER_NAME: "github-actions-demo"
            WORKFLOW_YAML_PATH: argo/workflow.yaml # the argo workflow file relative to the repo's root.
-           PARAMETER_FILE_PATH: argo/params.yml # optional parameter file.  This can be built dynamically inside the action or appended to from an existing file in the repo.
+           PARAMETER_FILE_PATH: argo/params.yml # optional parameter file.
 
 
