--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -49,26 +49,26 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       
-       - name: Copy Repo Files
-         uses: actions/checkout@master
+    - name: Copy Repo Files
+      uses: actions/checkout@master
 
-       - name: Build param file
-         run: |
-           echo "GITHUB-SHA: $GITHUB_SHA" > argo/params.yml
+    - name: Build param file
+      run: |
+        echo "GITHUB-SHA: $GITHUB_SHA" > argo/params.yml
 
-       - name: Submit Argo Deployment
-         id: argo
-         uses: machine-learning-apps/gke-argo@master
-         with:
-           ARGO_URL: ${{ secrets.ARGO_URI }}
-           APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-           PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
-           LOCATION_ZONE: "us-west1-a"
-           CLUSTER_NAME: "github-actions-demo"
-           WORKFLOW_YAML_PATH: argo/workflow.yaml # the argo workflow file relative to the repo's root.
-           PARAMETER_FILE_PATH: argo/params.yml # optional parameter file.
-      
-      - name: Create Check
+    - name: Submit Argo Deployment
+      id: argo
+      uses: machine-learning-apps/gke-argo@master
+      with:
+        ARGO_URL: ${{ secrets.ARGO_URI }}
+        APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        PROJECT_ID: ${{ secrets.GOOGLE_PROJECT_ID }}
+        LOCATION_ZONE: "us-west1-a"
+        CLUSTER_NAME: "github-actions-demo"
+        WORKFLOW_YAML_PATH: "argo/workflow.yaml" # the argo workflow file relative to the repo's root.
+        PARAMETER_FILE_PATH: "argo/params.yml" # optional parameter file.
+  
+    - name: Create Check
         run: echo "Hello"
 
 
