--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -52,9 +52,9 @@ jobs:
     - name: Copy Repo Files
       uses: actions/checkout@master
 
-    - name: Build param file
+    - name: Build Argo Param File
       run: |
-        echo "GITHUB-SHA: $GITHUB_SHA" > argo/params.yml
+        echo "GITHUB-SHA: $GITHUB_SHA" >> argo/params.yml
 
     - name: Submit Argo Deployment
       id: argo
@@ -69,6 +69,12 @@ jobs:
         PARAMETER_FILE_PATH: "argo/params.yml" # optional parameter file.
   
     - name: Create Check
-      run: echo "Hello"
+      run: |
+        python3 action_files/create_check_run.py "in_progress", "Argo-Workflow", "ML Workflow For SHA $GITHUB_SHA", "Links [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT)"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ARGO_LINK: ${{ steps.argo.outputs.WORKFLOW_URL }}
+        WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
+        WANDB_PROJECT: ${{ secrets.WANDB_PROJECT }}
 
 
