fix workflow file

--- a/argo/workflow.yaml
+++ b/argo/workflow.yaml
@@ -10,6 +10,10 @@ spec:
     parameters:
     - name: GITHUB-SHA
       value: NOT_SUPPLIED
+    - name: WANDB-ENTITY
+      value: NOT_SUPPLIED
+    - name: WANDB-PROJECT
+      value: NOT_SUPPLIED
 
   templates:
   - name: actions 
