--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -56,6 +56,10 @@ jobs:
       run: |
         echo "GITHUB-SHA: $GITHUB_SHA" >> argo/params.yml
 
+    - name: See Argo Param File
+      run: |
+        cat argo/params.yml
+
     - name: Submit Argo Deployment
       id: argo
       uses: machine-learning-apps/gke-argo@master
