--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -1,5 +1,5 @@
 name: ML Workflow Via Actions
-on: push
+on: issue_comment
 
 jobs:
   # build-cpu-image:
@@ -48,16 +48,30 @@ jobs:
     #needs: [build-cpu-image, build-gpu-image]
     runs-on: ubuntu-latest
     steps: 
+
+    - name: listen for PR Comments
+      id: prcomm
+      uses: machine-learning-apps/actions-chatops@master
+      with:
+        TRIGGER_PHRASE: "/run-full-test"
+        PR_ACKNOWLEDGEMENT_LABEL: "Full Test Pending"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Copy Repo Files
+      if: steps.prcomm.outputs.TRIGGERED == 'true'
       uses: actions/checkout@master
+      with:
+        ref: ${{ steps.prcomm.outputs.SHA }}
 
-    - name: Build Argo Param File 
+    - name: Build Argo Param File
+      if: steps.prcomm.outputs.TRIGGERED == 'true'
       run: |
         cd $GITHUB_WORKSPACE
         echo "GITHUB-SHA: $GITHUB_SHA" >> argo/params.yaml
           
     - name: Submit Argo Deployment
+      if: steps.prcomm.outputs.TRIGGERED == 'true'
       id: argo
       uses: machine-learning-apps/gke-argo@master
       with:
@@ -70,6 +84,7 @@ jobs:
         PARAMETER_FILE_PATH: "argo/params.yaml" # optional parameter file.
   
     - name: Create Check
+      if: steps.prcomm.outputs.TRIGGERED == 'true'
       run: |
         python3 action_files/create_check_run.py "in_progress" "Argo-Workflow-Running" "ML Workflow For SHA $GITHUB_SHA" "Links [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT)" " "
         bash action_files/pr_comment.sh "ML Workflow For SHA $GITHUB_SHA has been instantiated:\nLinks: [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT) | Docker Registries: [hamelsmu/ml-cicd](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd), [hamelsmu/ml-cicd-gpu](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd-gpu)"
