--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -1,37 +1,29 @@
 name: ML Workflow Via Actions
-on: issue_comment
+on: pull_request
+  types: [labeled]
 
 jobs:
-  build-cpu-image:
+
+  build-containers:
     runs-on: ubuntu-latest
     steps:
-
-    - name: listen for PR Comments
-      id: prcomm
-      uses: machine-learning-apps/actions-chatops@master
-      with:
-        TRIGGER_PHRASE: "/run-full-test"
-        PR_ACKNOWLEDGEMENT_LABEL: "Full Test Pending"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Copy Repository Contents
       uses: actions/checkout@master
 
-    - name: Create Check
-      if: steps.prcomm.outputs.TRIGGERED == 'true'
-      run: |
-        python3 action_files/create_check_run.py "in_progress" "build-cpu-image" "" "" ""
+    - name: Trigger on PR Label
+      id: label
+      run: python action_files/validate_payload.py
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SHA: ${{ steps.prcomm.outputs.SHA }}   
+        TRIGGER_LABEL_NAME: "Full Test Pending"
       
     - name: Publish CPU Image to DockerHub
+      if: steps.label.outputs.TRIGGERED == 'true'
       run: |
         cd $GITHUB_WORKSPACE
         echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
         BASE_NAME="$USERNAME/ml-cicd"
-        IMAGE_NAME="$BASE_NAME:$SHA"
+        IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
         docker pull $BASE_NAME || true
         docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
         docker push $IMAGE_NAME
@@ -39,58 +31,30 @@ jobs:
       env:
         USERNAME: ${{ secrets.DOCKER_USERNAME }}
         PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        SHA: ${{ steps.prcomm.outputs.SHA }}   
 
-  # build-gpu-image:
-  #   runs-on: ubuntu-latest
-  #   steps:
-
-  #   - name: Copy Repository Contents
-  #     uses: actions/checkout@master
-      
-  #   - name: Publish GPU Image to DockerHub
-  #     run: |
-  #       cd $GITHUB_WORKSPACE
-  #       echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
-  #       BASE_NAME="$USERNAME/ml-cicd-gpu"
-  #       IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
-  #       docker pull $BASE_NAME || true
-  #       docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
-  #       docker push $IMAGE_NAME
-  #       docker push $BASE_NAME
-  #     env:
-  #       USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  #       PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  
-  submit-argo-workflow:
-    #needs: [build-cpu-image, build-gpu-image]
-    runs-on: ubuntu-latest
-    steps: 
-
-    - name: listen for PR Comments
-      id: prcomm
-      uses: machine-learning-apps/actions-chatops@master
-      with:
-        TRIGGER_PHRASE: "/run-full-test"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-    - name: Copy Repo Files
-      if: steps.prcomm.outputs.TRIGGERED == 'true'
-      uses: actions/checkout@master
-      with:
-        ref: ${{ steps.prcomm.outputs.SHA }}
-
-    - name: Build Argo Param File
-      if: steps.prcomm.outputs.TRIGGERED == 'true'
+    - name: Publish GPU Image to DockerHub
+      if: steps.label.outputs.TRIGGERED == 'true'
       run: |
         cd $GITHUB_WORKSPACE
-        echo "GITHUB-SHA: $SHA" >> argo/params.yaml
+        echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
+        BASE_NAME="$USERNAME/ml-cicd-gpu"
+        IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
+        docker pull $BASE_NAME || true
+        docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
+        docker push $IMAGE_NAME
+        docker push $BASE_NAME
       env:
-        SHA: ${{ steps.prcomm.outputs.SHA }}
+        USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build Argo Param File
+      if: steps.label.outputs.TRIGGERED == 'true'
+      run: |
+        cd $GITHUB_WORKSPACE
+        echo "GITHUB-SHA: $GITHUB_SHA" >> argo/params.yaml
           
     - name: Submit Argo Deployment
-      if: steps.prcomm.outputs.TRIGGERED == 'true'
+      if: steps.label.outputs.TRIGGERED == 'true'
       id: argo
       uses: machine-learning-apps/gke-argo@master
       with:
@@ -103,7 +67,7 @@ jobs:
         PARAMETER_FILE_PATH: "argo/params.yaml" # optional parameter file.
   
     - name: Create Check
-      if: steps.prcomm.outputs.TRIGGERED == 'true'
+      if: steps.label.outputs.TRIGGERED == 'true'
       run: |
         python3 action_files/create_check_run.py "in_progress" "Argo-Workflow-Running" "ML Workflow For SHA $GITHUB_SHA" "Links [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT)" " "
         bash action_files/pr_comment.sh "ML Workflow For SHA $SHA has been instantiated:\nLinks: [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT) | Docker Registries: [hamelsmu/ml-cicd](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd), [hamelsmu/ml-cicd-gpu](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd-gpu)"
@@ -112,7 +76,5 @@ jobs:
         ARGO_LINK: ${{ steps.argo.outputs.WORKFLOW_URL }}
         WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
         WANDB_PROJECT: ${{ secrets.WANDB_PROJECT }}
-        ISSUE_NUMBER: ${{ steps.prcomm.outputs.PR_NUMBER }}
-        SHA: ${{ steps.prcomm.outputs.SHA }}        
-
+        ISSUE_NUMBER: ${{ steps.label.outputs.ISSUE_NUMBER }}
 
