--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -18,35 +18,35 @@ jobs:
       env:
         TRIGGER_LABEL_NAME: "Full Test Pending"
       
-    - name: Publish CPU Image to DockerHub
-      if: steps.label.outputs.TRIGGERED == 'true'
-      run: |
-        cd $GITHUB_WORKSPACE
-        echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
-        BASE_NAME="$USERNAME/ml-cicd"
-        IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
-        docker pull $BASE_NAME || true
-        docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
-        docker push $IMAGE_NAME
-        docker push $BASE_NAME
-      env:
-        USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    # - name: Publish CPU Image to DockerHub
+    #   if: steps.label.outputs.TRIGGERED == 'true'
+    #   run: |
+    #     cd $GITHUB_WORKSPACE
+    #     echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
+    #     BASE_NAME="$USERNAME/ml-cicd"
+    #     IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
+    #     docker pull $BASE_NAME || true
+    #     docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
+    #     docker push $IMAGE_NAME
+    #     docker push $BASE_NAME
+    #   env:
+    #     USERNAME: ${{ secrets.DOCKER_USERNAME }}
+    #     PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Publish GPU Image to DockerHub
-      if: steps.label.outputs.TRIGGERED == 'true'
-      run: |
-        cd $GITHUB_WORKSPACE
-        echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
-        BASE_NAME="$USERNAME/ml-cicd-gpu"
-        IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
-        docker pull $BASE_NAME || true
-        docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
-        docker push $IMAGE_NAME
-        docker push $BASE_NAME
-      env:
-        USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    # - name: Publish GPU Image to DockerHub
+    #   if: steps.label.outputs.TRIGGERED == 'true'
+    #   run: |
+    #     cd $GITHUB_WORKSPACE
+    #     echo ${PASSWORD} | docker login -u $USERNAME --password-stdin
+    #     BASE_NAME="$USERNAME/ml-cicd-gpu"
+    #     IMAGE_NAME="$BASE_NAME:$GITHUB_SHA"
+    #     docker pull $BASE_NAME || true
+    #     docker build --cache-from $BASE_NAME -t $IMAGE_NAME -t $BASE_NAME -f docker/Dockerfile .
+    #     docker push $IMAGE_NAME
+    #     docker push $BASE_NAME
+    #   env:
+    #     USERNAME: ${{ secrets.DOCKER_USERNAME }}
+    #     PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build Argo Param File
       if: steps.label.outputs.TRIGGERED == 'true'
@@ -71,7 +71,7 @@ jobs:
       if: steps.label.outputs.TRIGGERED == 'true'
       run: |
         python3 action_files/create_check_run.py "in_progress" "Argo-Workflow-Running" "ML Workflow For SHA $GITHUB_SHA" "Links [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT)" " "
-        bash action_files/pr_comment.sh "ML Workflow For SHA $SHA has been instantiated:\nLinks: [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT) | Docker Registries: [hamelsmu/ml-cicd](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd), [hamelsmu/ml-cicd-gpu](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd-gpu)"
+        bash action_files/pr_comment.sh "ML Workflow For SHA $GITHUB_SHA has been instantiated:\nLinks: [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT) | Docker Registries: [ml-cicd](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd), [ml-cicd-gpu](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd-gpu)"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         ARGO_LINK: ${{ steps.argo.outputs.WORKFLOW_URL }}
