--- a/.github/workflows/ml-cicd.yaml
+++ b/.github/workflows/ml-cicd.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
 
-  build-containers:
+  ml-workflow:
     runs-on: ubuntu-latest
     steps:
 
@@ -77,5 +77,14 @@ jobs:
         ARGO_LINK: ${{ steps.argo.outputs.WORKFLOW_URL }}
         WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
         WANDB_PROJECT: ${{ secrets.WANDB_PROJECT }}
-        ISSUE_NUMBER: ${{ steps.label.outputs.ISSUE_NUMBER }}
 
+    - name: Comment With Metadata
+      if: steps.label.outputs.TRIGGERED == 'true'
+      run: |
+        bash action_files/pr_comment.sh "ML Workflow For SHA $GITHUB_SHA has been instantiated:\nLinks: [Argo Workflow]($ARGO_LINK) | [W&B Project](https://app.wandb.ai/$WANDB_ENTITY/$WANDB_PROJECT) | Docker Registries: [ml-cicd](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd), [ml-cicd-gpu](https://cloud.docker.com/repository/docker/hamelsmu/ml-cicd-gpu)"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ARGO_LINK: ${{ steps.argo.outputs.WORKFLOW_URL }}
+        WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
+        WANDB_PROJECT: ${{ secrets.WANDB_PROJECT }}
+        ISSUE_NUMBER: ${{ steps.label.outputs.ISSUE_NUMBER }}
